fixe a lot of syntax problem in different views and models also the configuration of tailwind

--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
     "username": "user",
     "password": "wallgestPass",
     "database": "wallgest",
-    "host": "mysql",
+    "host": "localhost",
     "dialect": "mysql",
     "port": 3311
   },
