--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       NODE_ENV: development
       PORT: 3100
       DB_HOST: mysql
+      DB_PORT: 3306
       DB_USER: user
       DB_PASSWORD: wallgestPass
       DB_NAME: wallgest
