--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "prestart": "tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css --content ./views/**/*.ejs",
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "build:css": "tailwindcss -i ./public/styles/input.css -o ./public/styles/output.css --content ./views/**/*.ejs --watch",
+    "db:migrate": "sequelize db:migrate --config ./config/config.json --migrations-path ./database/migrations",
+    "db:seed": "sequelize db:seed:all --config ./config/config.json --seeders-path ./database/seeders"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +21,7 @@
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
     "morgan": "^1.10.1",
@@ -26,7 +31,11 @@
   "keywords": [],
   "description": "",
   "devDependencies": {
+    "@tailwindcss/cli": "^4.0.0",
+    "autoprefixer": "^10.4.21",
     "nodemon": "^3.1.10",
-    "sequelize-cli": "^6.6.3"
+    "postcss": "^8.5.6",
+    "sequelize-cli": "^6.6.3",
+    "tailwindcss": "^4.1.13"
   }
 }
