modifie the view of dashboard of the user where he can manage here budget depending on the category selected

--- a/config/config.json
+++ b/config/config.json
@@ -3,9 +3,9 @@
     "username": "user",
     "password": "wallgestPass",
     "database": "wallgest",
-    "host": "localhost",
+    "host": "mysql",
     "dialect": "mysql",
-    "port": 3311
+    "port": 3306
   },
   "test": {
     "username": "user",
